--- a/static/layout.html
+++ b/static/layout.html
@@ -19,8 +19,8 @@
         <nav class="transparent z-depth-0">
             <div class="nav-wrapper container">
                 <a href="http://uoshub.tk" class="brand-logo">
-                    <object type="image/svg+xml" data="{{ url_for('static', filename='img/uos_logo.svg') }}">Logo</object>
-                    <span class="light-green-text text-darken-2"><b class="blue-grey-text text-darken-4">UOS</b> HUB</span>
+                    <object type="image/svg+xml" data="{{ url_for('static', filename='img/logo.svg') }}">Logo</object>
+                    <span class="light-green-text text-darken-2"><b class="blue-grey-text text-darken-3">UOS</b> HUB</span>
                 </a>
                 <ul class="right hide-on-med-and-down">
                     {% if 'name' in session -%}
