--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -14,7 +14,7 @@
                 <div class="col l4 m6 s12">
                     <div class="card-panel shadow blue darken-2" onclick="location.href='{{ url_for('schedule.index') }}'">
                         <div class="row valign-wrapper">
-                            <i class="fa fa-fw fa-calendar" aria-hidden="true"></i>
+                            <i class="fa fa-fw fa-calendar"></i>
                             <h4>My Schedule</h4>
                         </div>
                     </div>
@@ -22,7 +22,7 @@
                 <div class="col l4 m6 s12">
                     <div class="card-panel shadow red darken-2" onclick="location.href='/email'">
                         <div class="row valign-wrapper">
-                            <i class="fa fa-fw fa-envelope-o" aria-hidden="true"></i>
+                            <i class="fa fa-fw fa-envelope-o"></i>
                             <h4>My Email</h4>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
                 <div class="col l4 m6 s12">
                     <div class="card-panel shadow teal darken-2" onclick="location.href='/balance'">
                         <div class="row valign-wrapper">
-                            <i class="fa fa-fw fa-credit-card" aria-hidden="true"></i>
+                            <i class="fa fa-fw fa-credit-card"></i>
                             <h4>My Balance</h4>
                         </div>
                     </div>
@@ -38,7 +38,7 @@
                 <div class="col l4 m6 s12">
                     <div class="card-panel shadow green darken-2" onclick="location.href='/grades'">
                         <div class="row valign-wrapper">
-                            <i class="fa fa-fw fa-graduation-cap" aria-hidden="true"></i>
+                            <i class="fa fa-fw fa-list-alt"></i>
                             <h4>My Grades</h4>
                         </div>
                     </div>
@@ -46,7 +46,7 @@
                 <div class="col l4 m6 s12">
                     <div class="card-panel shadow orange darken-2" onclick="location.href='/friends'">
                         <div class="row valign-wrapper">
-                            <i class="fa fa-fw fa-users" aria-hidden="true"></i>
+                            <i class="fa fa-fw fa-users"></i>
                             <h4>My Friends</h4>
                         </div>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="col l4 m6 s12">
                     <div class="card-panel shadow purple darken-2" onclick="location.href='/blackboard'">
                         <div class="row valign-wrapper">
-                            <i class="fa fa-fw fa-pencil-square-o" aria-hidden="true"></i>
+                            <i class="fa fa-fw fa-pencil-square-o"></i>
                             <h4>My BlackBoard</h4>
                         </div>
                     </div>
