--- a/static/dashboard.html
+++ b/static/dashboard.html
@@ -8,6 +8,7 @@
 {% block title %}Dashboard - {% endblock %}
 
 {% block body %}
+        <!--Six cards container start-->
         <div class="container">
             <div class="row hide-on-small-only"></div>
             <div class="row" id="dashboard">
@@ -60,5 +61,5 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!--Six cards container end-->
 {%- endblock %}
