--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
+        <!--Page container start-->
         <div class="container">
-        </div>
+        </div><!--Page container end-->
 {%- endblock %}
