Back to uncompressed libs in development

--- a/static/general.html
+++ b/static/general.html
@@ -1,18 +1,18 @@
 
         <!--Import Font Awesome-->
-        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.css') }}">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.css') }}" media="screen, projection"/>
         <!--Import general styles-->
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
         <!--Import jQuery-x.min.js before materialize.min.js-->
-        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.1.0.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
         <!--Import materialize.min.js-->
-        <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.js') }}"></script>
         <!--Import angular.min.js-->
-        <script type="text/javascript" src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/angular.js') }}"></script>
         <!--Import angular-local-storage.min.js-->
-        <script type="text/javascript" src="{{ url_for('static', filename='js/angular-local-storage.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/angular-local-storage.js') }}"></script>
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
