--- a/static/ganalytics.html
+++ b/static/ganalytics.html
@@ -1,3 +1,4 @@
+{% assets "ganalytics.js" %}
 <script>
             (function(i, s, o, g, r, a, m) {
                 i["GoogleAnalyticsObject"] = r;
@@ -9,8 +10,9 @@
                 a.async = 1;
                 a.src = g;
                 m.parentNode.insertBefore(a, m)
-            })(window, document, "script", "{{ url_for('static', filename='js/ganalytics.js') }}", "ga");
+            })(window, document, "script", "{{ ASSET_URL }}", "ga");
 
             ga("create", "UA-82438910-1", "auto");
             ga("send", "pageview");
         </script>
+{% endassets %}
